tests/snapshots/execution_spec__auth-basic.md_client.snap
---
source: tests/execution_spec.rs
expression: client
---
scalar Date

scalar Email

scalar Empty

scalar JSON

type Nested {
  name: String!
  protected: String!
}

scalar PhoneNumber

type ProtectedType {
  name: String!
  nested: String!
}

type Query {
  nested: Nested!
  protectedScalar: String!
  protectedType: ProtectedType
  scalar: String!
}

scalar Url

schema {
  query: Query
}
