tests/snapshots/execution_spec__auth-jwt-const.md_assert_2.snap
---
source: tests/execution_spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "protectedScalar": "data from protected scalar",
      "nested": {
        "name": "protected nested name",
        "protected": "protected nested"
      },
      "protectedType": {
        "name": "protected type name",
        "nested": "protected type nested"
      }
    }
  }
}
