tests/snapshots/execution_spec__auth-jwt-const.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(auth: [{id: "jwt", jwt: {jwks: {data: "{\n  \"keys\": [\n    {\n      \"kty\": \"RSA\",\n      \"use\": \"sig\",\n      \"alg\": \"RS256\",\n      \"kid\": \"I48qMJp566SSKQogYXYtHBo9q6ZcEKHixNPeNoxV1c8\",\n      \"n\": \"ksMb5oMlhJ_HzAebCuBG6-v5Qc4J111ur7Aux6-8SbxzqFONsf2Bw6ATG8pAfNeZ-USA3_T1mGkYTDvfoggXnxsduWV_lePZKKOq_Qp_EDdzic1bVTJQDad3CXldR3wV6UFDtMx6cCLXxPZM5n76e7ybPt0iNgwoGpJE28emMZJXrnEUFzxwFMq61UlzWEumYqW3uOUVp7r5XAF5jQ_1nQAnpHBnRFzdNPVb3E6odMGu3jgp8mkPbPMP16Fund4LVplLz8yrsE9TdVrSdYJThylRWn_BwvJ0DjUcp8ibJya86iClUlixAmBwR9NdStHwQqHwmMXMKkTXo-ytRmSUobzxX9T8ESkij6iBhQpmDMD3FbkK30Y7pUVEBBOyDfNcWOhholjOj9CRrxu9to5rc2wvufe24VlbKb9wngS_uGfK4AYvVyrcjdYMFkdqw-Mft14HwzdO2BTS0TeMDZuLmYhj_bu5_g2Zu6PH5OpIXF6Fi8_679pCG8wWAcFQrFrM0eA70wD_SqD_BXn6pWRpFXlcRy_7PWTZ3QmC7ycQFR6Wc6Px44y1xDUoq3rH0RlZkeicfvP6FRlpjFU7xF6LjAfd9ciYBZfJll6PE7zf-i_ZXEslv-tJ5-30-I4Slwj0tDrZ2Z54OgAg07AIwAiI5o4y-0vmuhUscNpfZsGAGhE\",\n      \"e\": \"AQAB\"\n    }\n  ]\n}"}}}], graphiql: true, port: 8000) @upstream {
  query: Query
}

type Nested {
  name: String! @const(data: "protected nested name")
  protected: String! @const(data: "protected nested") @protected
}

type ProtectedType {
  name: String! @const(data: "protected type name")
  nested: String! @const(data: "protected type nested")
}

type Query {
  nested: Nested!
  protectedScalar: String! @const(data: "data from protected scalar") @protected
  protectedType: ProtectedType
  scalar: String! @const(data: "data from public scalar")
}
