tests/snapshots/execution_spec__auth-jwt.md_merged.snap
---
source: tests/execution_spec.rs
expression: merged
---
schema @server(graphiql: true, port: 8000) @upstream @link(id: "jwks", src: "jwks.json", type: Jwks) {
  query: Query
}

type Nested {
  name: String! @expr(body: "nested name")
  protected: String! @expr(body: "protected nested") @protected
}

type ProtectedType {
  name: String! @expr(body: "protected type name")
  nested: String! @expr(body: "protected type nested")
}

type Query {
  nested: Nested!
  protectedScalar: String! @expr(body: "data from protected scalar") @protected
  protectedType: ProtectedType
  scalar: String! @expr(body: "data from public scalar")
}
